fix information_10 file

--- a/app/src/main/res/layout/activity_infromation10.xml
+++ b/app/src/main/res/layout/activity_infromation10.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="21dp"
         android:layout_marginLeft="21dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="334dp"
         android:layout_marginRight="334dp"
         android:text="십계명"
@@ -65,10 +65,10 @@
         android:id="@+id/topic1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="91dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
-        android:text="남향 동향 등 일조권이 좋은 집은\n가격이 빨리 오르고 살기에도 편리하다"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="168dp"
+        android:layout_marginRight="168dp"
+        android:text="방의 낮과 밤"
         android:textColor="#1459D4"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -94,12 +94,12 @@
 
     <TextView
         android:id="@+id/content1"
-        android:layout_width="364dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:text="같은 동의 아파트라도 방향이 안좋은 것은 값이 5~7%정도 낮고\n급할 때 팔려고 내놔도 제 값을 받기 힘들다.\n은행에서 차입시에도 감정가 및 대출금액이 달라진다."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:text="볕이 잘 드는지,가로등이 많은지 두 번정도 방문해서 체크한다."
         android:textColor="#5E5E5E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topic1" />
@@ -112,24 +112,24 @@
         android:layout_marginLeft="57dp"
         android:layout_marginEnd="31dp"
         android:layout_marginRight="31dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="12dp"
         android:text="2"
         android:textColor="#1459D4"
         android:textSize="40dp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/content2"
         app:layout_constraintEnd_toStartOf="@+id/topic2"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.18"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/topic2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginRight="120dp"
-        android:text="전망이 좋은 집을 골라라."
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="188dp"
+        android:layout_marginRight="188dp"
+        android:text="방의 방향"
         android:textColor="#1459D4"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -139,13 +139,13 @@
     <TextView
         android:id="@+id/content2"
         android:layout_width="364dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="37dp"
         android:layout_marginLeft="37dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="아파트가 고층화되면서 조망권이 점차 주택값의 변수로\n 등장하는 추세다. 한강변 아파트의 경우 조망권에 따라\n 몇천만원씩 차이가 난다."
+        android:text="채광과 통풍이 좋은 남향, 아침이 밝은 동향, 겨울에 따듯한 서향, 장시간 집중에 좋은 북향 꼭 남향이라고 해서 좋은 건 아니에요. 집에 있는 시간대, 추위를 많이 타는지, 집에서 집중할 시간이 많이 필요한지 등 자신 특성에 맞게 고르는게 중요합니다."
         android:textColor="#5E5E5E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -160,23 +160,24 @@
         android:layout_marginLeft="56dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginBottom="12dp"
         android:text="3"
         android:textColor="#1459D4"
         android:textSize="40dp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/content3"
         app:layout_constraintEnd_toStartOf="@+id/topic3"
+        app:layout_constraintHorizontal_bias="0.23"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/topic3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginRight="72dp"
-        android:text="대로변에 접해 있는 동은 피하자"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="232dp"
+        android:layout_marginRight="232dp"
+        android:text="옵션"
         android:textColor="#1459D4"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -192,7 +193,8 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="소음이 심하고 먼지가 많이 일어나기 때문에 생활하기에도\n불편하고 잘 팔리지도 않는다. 아울러 거주자의 스트레스도\n이만 저만이 아니다."
+        android:text="전자제품, 침대, 옷장 등이 있는지, 이상은 없는지 확인 후 집주인에게 꼭 제보
+만약을 대비해 입주 당시의 옵션 사진을 찍어두는 것이 좋아요"
         android:textColor="#5E5E5E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -205,10 +207,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="121dp"
-        android:layout_marginRight="121dp"
-        android:text="지하철로부터 2km를\n벗어나지 않는 것이 좋다."
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginRight="200dp"
+        android:text="채광"
         android:textColor="#1459D4"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -222,7 +224,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:text="4"
         android:textColor="#1459D4"
         android:textSize="40dp"
@@ -240,7 +244,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="수도권 전체가 지하철을 중심으로 연결되는 추세다.\n지하철역에서 걸어다닐 수 있는 아파트가 가격의\n 상승탄력이 당연히 높다."
+        android:text="오전 11시~2시 사이에 방문해 확인해보세요. 불을 끈 상태에서 집이 환하면 채광이 좋은 것 !"
         android:textColor="#5E5E5E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -253,7 +257,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="54dp"
         android:layout_marginLeft="54dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="335dp"
         android:layout_marginRight="335dp"
         android:text="5"
@@ -261,6 +265,7 @@
         android:textSize="40dp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/content4" />
 
@@ -301,14 +306,71 @@
         android:id="@+id/num6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginLeft="56dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginBottom="17dp"
         android:text="6"
         android:textColor="#1459D4"
         android:textSize="40dp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="930dp" />
+        app:layout_constraintBottom_toTopOf="@+id/content6"
+        app:layout_constraintEnd_toStartOf="@+id/topic6"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    
+    <TextView
+        android:id="@+id/topic6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginRight="80dp"
+        android:text="단지주변에 공원이나 녹지가\n 풍부한지 확인하자."
+        android:textColor="#1459D4"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/num6"
+        app:layout_constraintTop_toBottomOf="@+id/content5" />
+
+    <TextView
+        android:id="@+id/content6"
+        android:layout_width="364dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="165dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:text="쾌적한 주거환경이 중시되면서'환경프리미엄'까지 등장하고\n 있다. 주변에 녹지가 많은 아파트가 인기를 끌고 있다."
+        android:textColor="#5E5E5E"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topic5" />
+
+    <TextView
+        android:id="@+id/num7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="7"
+        android:textColor="#1459D4"
+        android:textSize="40dp"
+        android:textStyle="bold|italic"
+        tools:layout_editor_absoluteX="54dp"
+        tools:layout_editor_absoluteY="1080dp" />
+
+    <TextView
+        android:id="@+id/topic7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="고층아파트는 준공된지 5년이내의 집을 사는 것이 유리하다."
+        android:textColor="#1459D4"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="1080dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
