--- a/app/src/main/res/layout/activity_information_contract.xml
+++ b/app/src/main/res/layout/activity_information_contract.xml
@@ -4,30 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Information_word">
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.tabs.TabLayout>
+    tools:context=".Information_contractActivity">
 
     <!--고정-->
     <ImageView
@@ -119,7 +96,7 @@
         android:layout_marginTop="39dp"
         android:layout_marginEnd="302dp"
         android:layout_marginRight="302dp"
-        android:text="오늘의 퀴즈"
+        android:text="부동산 계약 팁"
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -128,75 +105,23 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="114dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginBottom="30dp"
+        android:id="@+id/button5"
+        android:layout_width="324dp"
+        android:layout_height="57dp"
+        android:text="부동산 계약"
+        android:textColor="#ffffff"
         android:background="@drawable/button_color"
-        android:text="십계명"
-        android:textColor="#FFFFFF"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="138dp" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="114dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginRight="19dp"
-        android:layout_marginBottom="30dp"
+        android:id="@+id/button5"
+        android:layout_width="324dp"
+        android:layout_height="57dp"
+        android:text="부동산 계약"
+        android:textColor="#ffffff"
         android:background="@drawable/button_color"
-        android:text="계약 팁"
-        android:textColor="#FFFFFF"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
-        app:layout_constraintStart_toEndOf="@+id/button" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="114dp"
-        android:layout_height="72dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginRight="18dp"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/button_color"
-        android:text="단어"
-        android:textColor="#FFFFFF"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button3" />
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpager1"
-        android:layout_width="225dp"
-        android:layout_height="156dp"
-        android:layout_marginStart="158dp"
-        android:layout_marginLeft="158dp"
-        android:layout_marginTop="204dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewpager"
-            android:layout_width="225dp"
-            android:layout_height="156dp"
-            android:layout_marginTop="204dp"
-            android:layout_marginEnd="28dp"
-            android:layout_marginRight="28dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-    </androidx.viewpager.widget.ViewPager>
-
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="230dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
