--- a/app/src/main/res/layout/activity_information_contract.xml
+++ b/app/src/main/res/layout/activity_information_contract.xml
@@ -87,6 +87,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton3" />
 
+    <!--center-->
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -105,23 +106,99 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn1"
         android:layout_width="324dp"
         android:layout_height="57dp"
-        android:text="부동산 계약"
-        android:textColor="#ffffff"
+        android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/button_color"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="138dp" />
+        android:text="등기부등본"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/btn2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn2"
         android:layout_width="324dp"
         android:layout_height="57dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/button_color"
+        android:text="부동산 계약은 집주인과 함께"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/btn3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="324dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/button_color"
+        android:text="협의된 내용은 특약사항에 명시"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/btn4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="324dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/button_color"
+        android:text="전입신고"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/btn5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn5"
+        android:layout_width="324dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/button_color"
         android:text="부동산 계약"
         android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/btn6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn6"
+        android:layout_width="324dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginBottom="64dp"
         android:background="@drawable/button_color"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="230dp" />
+        android:text="부동산 계약"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
