--- a/app/src/main/res/layout/activity_information_contract.xml
+++ b/app/src/main/res/layout/activity_information_contract.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Information_contractActivity">
+    tools:context=".contract.Information_contractActivity">
 
     <!--고정-->
     <ImageView
