--- a/app/src/main/res/layout/activity_infromation10.xml
+++ b/app/src/main/res/layout/activity_infromation10.xml
@@ -309,12 +309,17 @@
         android:id="@+id/num6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="54dp"
+        android:layout_marginLeft="54dp"
+        android:layout_marginTop="24dp"
         android:text="6"
         android:textColor="#1459D4"
         android:textSize="40dp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="868dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content5" />
 
     <TextView
         android:id="@+id/topic6"
@@ -338,6 +343,7 @@
         android:layout_height="60dp"
         android:layout_marginStart="23dp"
         android:layout_marginLeft="23dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:text="관리비에 포함되는 요금, 공과금 액수를 집주인 또는 전 세입자를 통해 확인
@@ -347,131 +353,199 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="937dp" />
+        app:layout_constraintTop_toBottomOf="@+id/num6" />
 
     <TextView
         android:id="@+id/num7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="54dp"
+        android:layout_marginLeft="54dp"
+        android:layout_marginBottom="9dp"
         android:text="7"
         android:textColor="#1459D4"
         android:textSize="40dp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="1028dp" />
+        app:layout_constraintBottom_toTopOf="@+id/content7"
+        app:layout_constraintEnd_toStartOf="@+id/topic7"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/topic7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="67dp"
+        android:layout_marginLeft="67dp"
+        android:layout_marginEnd="232dp"
+        android:layout_marginRight="232dp"
+        android:layout_marginBottom="31dp"
         android:text="방음"
         android:textColor="#1459D4"
         android:textSize="18dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="1035dp" />
+        app:layout_constraintBottom_toTopOf="@+id/content7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/num7" />
 
     <TextView
         android:id="@+id/content7"
         android:layout_width="364dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:text="벽을 두드려보고 공간이 비어있다면 방음에 취약할 가능성이 큼"
         android:textColor="#5E5E5E"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="1090dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content6" />
 
     <TextView
         android:id="@+id/num8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginLeft="56dp"
+        android:layout_marginTop="20dp"
         android:text="8"
         android:textColor="#1459D4"
         android:textSize="40dp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="1130dp" />
+        app:layout_constraintEnd_toStartOf="@+id/topic8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content7" />
 
     <TextView
         android:id="@+id/topic8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="67dp"
+        android:layout_marginLeft="67dp"
+        android:layout_marginEnd="196dp"
+        android:layout_marginRight="196dp"
+        android:layout_marginBottom="36dp"
         android:text="주인 얼굴"
         android:textColor="#1459D4"
         android:textSize="18dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="1140dp" />
+        app:layout_constraintBottom_toTopOf="@+id/content8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/num8" />
 
     <TextView
         android:id="@+id/content8"
         android:layout_width="364dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:text="관상을 보라는 게 아닌 직접 만나서 방음, 옵션, 관리비, 쓰레기 처리 방법 등을 문의할 것 !"
         android:textColor="#5E5E5E"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="1200dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/num8" />
 
     <TextView
         android:id="@+id/num9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="54dp"
+        android:layout_marginLeft="54dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:text="9"
         android:textColor="#1459D4"
         android:textSize="40dp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="1260dp" />
+        app:layout_constraintEnd_toStartOf="@+id/topic9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content8" />
 
     <TextView
         android:id="@+id/topic9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginEnd="196dp"
+        android:layout_marginRight="196dp"
+        android:layout_marginBottom="26dp"
         android:text="수압"
         android:textColor="#1459D4"
         android:textSize="18dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="1280dp" />
+        app:layout_constraintBottom_toTopOf="@+id/content9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/num9" />
 
     <TextView
         android:id="@+id/content9"
         android:layout_width="364dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:text="세면대 물 틀어놓고 변기 물 내려보면 수압이 적절한지 간단히 알 수 있음"
         android:textColor="#5E5E5E"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="1330dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/num9" />
 
     <TextView
         android:id="@+id/num10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginLeft="56dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:text="10"
         android:textColor="#1459D4"
         android:textSize="40dp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="1400dp" />
+        app:layout_constraintEnd_toStartOf="@+id/topic10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content9" />
 
     <TextView
         android:id="@+id/topic10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginEnd="217dp"
+        android:layout_marginRight="217dp"
+        android:layout_marginBottom="46dp"
         android:text="곰팡이"
         android:textColor="#1459D4"
         android:textSize="18dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="1410dp" />
+        app:layout_constraintBottom_toTopOf="@+id/content10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/num10" />
 
     <TextView
         android:id="@+id/content10"
         android:layout_width="364dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:text="도배가 깨끗하게 새로 되어 있는 집! 안심하기에는 일러요\n혹시결로나 곰팡이가 있었는지 알아보고 집주인과 계약 전에 \n상의하세요 !"
         android:textColor="#5E5E5E"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="1480dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/num10" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
